# velma

./: down_smol.py  download.py  main.py  pyproject.toml  template.py
output/cognitivecomputations-DeepSeek-R1-AWQ/: output.jsonl.bkp
output/deepseek-ai-DeepSeek-R1-Distill-Llama-8b/: output.jsonl
