[project]
name = "velma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "flashinfer-python>=0.2.5",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "jsonlines>=4.0.0",
    "mypy>=1.15.0",
    "typer>=0.15.2",
    "vllm>=0.8.4",
]
